--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <title>iNotebook</title>
   </head>
   <body>
