--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles.css">
     <title>iNotebook</title>
   </head>
   <body>
