--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/99c435ba6b.js" crossorigin="anonymous"></script>
   </body>
 </html>
